--- a/gamkrib/src/components/searchAndFilterContainer/filter.css
+++ b/gamkrib/src/components/searchAndFilterContainer/filter.css
@@ -1,19 +1,3 @@
-
-
-/* .checkColor{
-    background-color: pink;
-   
-    border: 3px solid black ;
-} */
-
-
-.ui input:checked + .checkColor {
- border: 3px solid #8373e6;
-
-}
-
-
-.ui input:checked{ 
-
-    background-color: #8373e6;
+.active {
+    border: 2px solid #30D158 !important ;
 }
