completed the rating section

--- a/gamkrib/src/components/searchAndFilterContainer/filter.css
+++ b/gamkrib/src/components/searchAndFilterContainer/filter.css
@@ -1,3 +1,14 @@
-.active {
+.propertySelected {
     border: 2px solid #30D158 !important ;
+}
+
+.selectedRoomType {
+    background-color: #30D158 !important;
+    border: none !important;
+    color: white;
+}
+.propertyRatingType {
+    background-color: #30D158 !important;
+    border: none !important;
+    color: white;
 }
