--- a/gamkrib/src/index.css
+++ b/gamkrib/src/index.css
@@ -7,3 +7,22 @@
 * {
   margin: 0;
 }
+
+
+img,
+video {
+  max-width: 100%;
+  height: auto
+}
+
+
+.img {
+
+  width: 46px !important;
+}
+
+.notificationBell {
+
+
+  height: 22px;
+}
