--- a/gamkrib/src/components/admin/landlord/pageStyles/taileindInit.css
+++ b/gamkrib/src/components/admin/landlord/pageStyles/taileindInit.css
@@ -1,3 +1,5 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@layer base {
+    /* Disable all preflight styles for MyComponent */
+    @tailwind base;
+    @tailwind components;
+}
