--- a/gamkrib/src/index.css
+++ b/gamkrib/src/index.css
@@ -8,11 +8,11 @@ video {
   height: auto
 }
 
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; */
 
-@import './unreset.scss';
+/* @import './unreset.scss'; */
 
 .img {
 
